# whispertty

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: config.example.toml
src/whispertty/: __init__.py  __main__.py  cli.py  config.py  diarize.py  recorder.py  splash_art.py  transcribe.py  transcripts.py  ui.py
